--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -19,10 +19,7 @@
         force: true # Download new versions when they are available
     - name: Add apt repository
       apt_repository:
-        repo: >
-          deb
-          [signed-by=/etc/apt/keyrings/githubcli-archive-keyring.gpg]
-          https://cli.github.com/packages stable main
+        repo: deb [signed-by=/etc/apt/keyrings/githubcli-archive-keyring.gpg] https://cli.github.com/packages stable main
         filename: github-cli
         update_cache: true
     - name: Install
